lab3/k8s/ingress/node-template.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ns
  name: lab-k8s-$STUDENT
spec:
  selector:
    app: lab-k8s-$STUDENT
#  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
#      nodePort: 30081
